# python-deepseek-tui

./: .env.example  .gitignore  README.md  cli.py  client.py  config.toml  engine.py  main.py  pyproject.toml  requirements.txt  session.py  test_local.py  tools.py  tui.py
deepseek_tui/: __init__.py  cli.py  config.py  main.py  tui.py
deepseek_tui/api/: __init__.py  client.py
deepseek_tui/context/: __init__.py  compact.py  token_counter.py
deepseek_tui/db/: __init__.py  session.py
deepseek_tui/engine/: __init__.py  engine.py
deepseek_tui/subagents/: __init__.py  manager.py  runner.py
deepseek_tui/tools/: __init__.py  registry.py
deepseek_tui/ui/: __init__.py  app.py
